//    добавить инфу о том, что в репозитории NuGet'ов можно публиковать пакеты
//    небублично, с доступом не для всех. ты также добавить, что .NET Docs зовут
//    репозиторий NuGet реестром. ты ещё добавить инфо о том, что NuGet пакет
//    можно хранить и локально

26_aug_2021: LinkingAssembliesANDXML_Silent
//@6@@остановка здесь. ты на половину прочитать
//    Add packages to your .NET project. очень хочешь продолжить


27_aug_2021: dotnet_Silent
//@1@@ты сделать блок о dotnet list

27_aug_2021: dotnet_Silent
//@2@@ты добавить инфо в блок о dotnet add о "transitive packages"

27_aug_2021: dotnet_Silent
//@3@@ты сделать блок о dotnet restore

27_aug_2021: dotnet_Silent
//@4@@ты сделать блок о подразделе dotnet tool

27_aug_2021: Git_Silent
//@5@@ты сделать этот метод

27_aug_2021: dotnet_Silent
//@6@@ты подправить инфу о dotnet add package

27_aug_2021: dotnet_Silent
//@7@@ты сделать блок о подразделе dotnet help. остановка здесь. очень хочешь
//    продолжить читать man git tutorial


28_aug_2021: Git_Silent
//@1@@ты дополнить блок Commands

28_aug_2021: Git_Silent
//@2@@остановказ десь. ты писать о переменных окружения, что git построен
//    читать. очень хочешь продолжить


29_aug_2021: Git_Silent
//@1@@ты разобаться с переменными окружения git. ты добавить новую инфу о
//    git diff

29_aug_2021: Git_Silent
//@2@@ты подправить инфо в блоке What It Is, ты ясно написать, что git создать
//    сам Линус Торвальдс

29_aug_2021: Git_Silent
//@3@@ты подправить инфо в некоторых других подразделах git, кроме git diff

29_aug_2021: Git_Silent
//@4@@ты добавить инфо о git diff. очень хочешь продолжить


30_aug_2021: Git_Silent
//@1@@ты сильно дополнить блок о разделах git

30_aug_2021: Git_Silent
//@2@@ты добавить в блок о разделах git инфу о git log

30_aug_2021: Git_Silent
//@3@@ты добавить в блок о разделах git инфу о git branch. ты подравить
//    синопсис разедлов. очень хочешь продолжить