@@ -256,10 +256,10 @@ class _Git_ASPNETPreview
         //                                      между ними)
         //         
         //         
-        //   git branch and git switch
+        //   git branch and git switch and git merge
         //         
-        //     Как уже говорилось, git репозиторий может хранить в себе несколько веток разработки. Работать с ветками можно как раз
-        //         средствами этого раздела. Синопсис раздела прост:
+        //     Как уже говорилось, git репозиторий может хранить в себе несколько веток разработки. Работать с ветками можно средствами раздела
+        //         git branch. Синопсис раздела прост:
         //         
         //             git branch [options] [<branchName>]
         //         
@@ -272,14 +272,14 @@ class _Git_ASPNETPreview
         //               experimental
         //             * master
         //         
-        //         Как видишь, звёздочкой помечена текущая ветка
+        //         Как ты понял, звёздочкой помечена текущая ветка
         //         
         //     Сменить текущую ветку можно, используя раздел git switch. Синопсис у этого раздела простетский:
         //         
         //             git switch [options] <branch>
         //         
         //     Мы переходим в ветку experimental, введя    git switch experimental    . Эта команда своим выхлопом покажет, какие файлы были
-        //         изменены, но таки неза'commit'чены в предыдущей ветке. У меня такой выхлоп выглядит так:
+        //         изменены, но таки неза'commit'чены в предыдущей ветке. У меня выхлоп выглядил так:
         //         
         //             M	44-_Git_ASPNETPreview.cs
         //             M	6-ClassAndInterface_StructAndOOPAndSystemNullable.cs
@@ -288,9 +288,30 @@ class _Git_ASPNETPreview
         //         
         //     Теперь можно сделать несколько изменений и не беспокоится о их последствиях, ведь мы сейчас в ветке "experimental" (а она живёт
         //         отдельно от основной ветки "master". За'commit'им эти изменения, запустив команду    git commit -a    . Вернёмся снова на
-        //         ветку "master", запустив    git switch master    
+        //         ветку "master", запустив это:
+        //         
+        //             git switch master
+        //         
+        //         Если у тебя были неза'commit'ченные изменения в файлах, git switch вежливо тебе скажет об этом, и прервёт выполнение. Вот
+        //         что получил я:
+        //         
+        //             error: Your local changes to the following files would be overwritten by checkout:
+        //             44-_Git_ASPNETPreview.cs
+        //             Please commit your changes or stash them before you switch branches.
+        //             Aborting
+        //         
+        //         После за'commit'чивания этих изменений и таки выполнения команды    git switch master    ты моментально заметишь, что
+        //         файлы стали перезаписаны. Они так вернулись в то состояние, в котором ты их заснял последним commit'ом в ветке "master"
+        //         
+        //     На данный момент мы имеет две ветки, и начинка в них различается (к счастью, без конфликтов). Чтобы слить их воедино, нам
+        //         следует воспользоваться разделом    git merge    . Синопсис прост:
+        //         
+        //             git merge [options] <branch>
         //         
         //         
+        //         
+        //         
+
 
 
 
