@@ -1,6 +1,6 @@
 ﻿/*
  * creation date  12 dec 2020
- * last change    01 sep 2021
+ * last change    02 sep 2021
  * author  artur
  */
 using System;
@@ -23,7 +23,6 @@ partial class ClassAndInterface_StructAndOOPAndSystemNullable
 
         // В .NET классы - это всегда "ссылочный тип". Это значит, что их переменные - это всего лишь ссылки на сам объект класса,
         //   хранящегося в это время управляемой части кучи со сборкой мусора
-        //@1@@ты исправить опечатка в самом начале
 
 
         // Каждый .NET язык, по меньшей мере, поддерживает тип класса (ведь без BCL в .NET вообще никак). Класс - это краеугольный камень всего
