@@ -437,3 +437,10 @@
 30_aug_2021: Git_Silent
 //@3@@ты добавить в блок о разделах git инфу о git branch. ты подравить
 //    синопсис разедлов. очень хочешь продолжить
+
+
+01_aug_2021: Class_Silent
+//@1@@ты исправить опечатка в самом начале
+
+01_aug_2021: Git_Silent
+//@2@@ты добавить инфо о разделах git branch and git switch
